# game-viewer

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp  resources.qrc  test_request.json
client/client/: buttons.hpp  client.cpp  client.hpp  client_engine.cpp  client_engine.hpp  command.hpp  filter_dialog.cpp  filter_dialog.hpp  game_card.cpp  game_card.hpp  page_dialog.cpp  page_dialog.hpp  search_label.cpp  search_label.hpp  search_widget.cpp  search_widget.hpp  socket.cpp  socket.hpp  thread_pool.cpp  thread_pool.hpp
client/css/: style.css
client/include/: socket.hpp  window.hpp
client/src/: socket.cpp  window.cpp
docker/: Dockerfile  docker-compose.yml
lib/: CMakeLists.txt
lib/include/: functions.hpp  table_model.hpp
lib/src/: functions.cpp  table_model.cpp
libcommon/: CMakeLists.txt
libcommon/libcommon/: columns.cpp  columns.hpp  functions.cpp  functions.hpp  request_types.hpp  table_model.cpp  table_model.hpp
libcommon/libcommon/requests/: base.cpp  base.hpp  page.cpp  page.hpp  page_count.cpp  page_count.hpp  search.cpp  search.hpp  unique_values.hpp  unqiue_values.cpp
server/: CMakeLists.txt  main.cpp
server/include/: client_handler.hpp  database_manager.hpp  listener.hpp  request.hpp  request_handler.hpp  response.hpp  server.hpp
server/needs/: request.json  response.json  sql.txt  test_request.json
server/server/: client_handler.cpp  client_handler.hpp  column_to_comparefunc.hpp  database_manager.cpp  database_manager.hpp  listener.cpp  listener.hpp  log_manager.cpp  log_manager.hpp  request_handler.cpp  request_handler.hpp
server/server/request_executors/: page.cpp  page.hpp  page_count.cpp  page_count.hpp  search.cpp  search.hpp  unique_values.cpp  unique_values.hpp
server/server/requests/: base.cpp  base.hpp  page.cpp  page.hpp
server/server/responses/: base.hpp  page.cpp  page.hpp
server/src/: client_handler.cpp  database_manager.cpp  listener.cpp  log_manager.cpp  request.cpp  request_handler.cpp  response.cpp  server.cpp
